Fix text alignment and color

--- a/src/vs/workbench/parts/preferences/browser/media/settingsEditor2.css
+++ b/src/vs/workbench/parts/preferences/browser/media/settingsEditor2.css
@@ -129,7 +129,7 @@
 }
 
 .settings-editor > .settings-body > .no-results {
-	margin: 20px;
+	margin-top: 20px;
 	display: none;
 }
 
